--- a/NUnitTestNimGame/NUnitTestNimGame.csproj
+++ b/NUnitTestNimGame/NUnitTestNimGame.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NimGame\NimGame.csproj" />
+    <ProjectReference Include="..\NimGame_WinForms\NimGame_WinForms.csproj" />
   </ItemGroup>
 
 </Project>
