--- a/NimGame_WinForms/NimGame_WinForms.csproj
+++ b/NimGame_WinForms/NimGame_WinForms.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomComputerStrategy.cs" />
     <Compile Include="Stack.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
