--- a/NimGame_WinForms/NimGame_WinForms.csproj
+++ b/NimGame_WinForms/NimGame_WinForms.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="KnownStatesComputerStrategy.cs" />
+    <Compile Include="MinimizeComputerStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomComputerStrategy.cs" />
